# fanctl

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: AppIcon.icns
fanctl/: __init__.py  __main__.py
fanctl/backend/: __init__.py  controller.py  fake.py  paths.py  state.py  vesync.py
fanctl/ui/: __init__.py  flet_app.py  menubar_app.py  tk_app.py
tests/: test_controller.py
